--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,10 @@
           <scope>test</scope>
       </dependency>
 
+      <dependency>
+          <groupId>io.netty</groupId>
+          <artifactId>netty-all</artifactId>
+          <version>4.1.94.Final</version>
+      </dependency>
   </dependencies>
 </project>
