--- a/pom.xml
+++ b/pom.xml
@@ -50,5 +50,11 @@
           <artifactId>fastjson</artifactId>
           <version>1.2.60</version>
       </dependency>
+
+      <dependency>
+          <groupId>com.google.protobuf</groupId>
+          <artifactId>protobuf-java</artifactId>
+          <version>3.25.5</version>
+      </dependency>
   </dependencies>
 </project>
